# chat_websocket_service_rust

./: CLAUDE.md  Cargo.toml  TODOs.md  design_doc.md  learning_note.md
src/: app_state.rs  auth_middleware.rs  lib.rs  main.rs  message.rs
src/handler/: mod.rs  msg_handler.rs  ws_handler.rs  ws_request.rs
