[package]
name = "chat_websocket_service_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"]}
futures = "0.3"
serde_json = "1.0.149"
serde = {version = "1.0", features = ["derive"]}
bincode = {version = "1.3"}
anyhow = "1.0.102"
dashmap = "6.1.0"
thiserror = "2.0"
chat_common = {git="https://github.com/hotlatteiceamericano/chat_common"}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
jsonwebtoken = "10.3.0"

[dev-dependencies]
axum-test = { version = "19.1.1", features = ["ws"] }
rstest = "0.26.1"
